--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <header class="header">
-        <div class="header__text">
-            О компании 
+        <div class="background">
+            <div class="background__text">
+                О компании 
+            </div>
         </div>
     </header>
 </body>
