--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,49 @@
 <body>
     <header class="header">
         <div class="background">
-            <div class="background__text">
-                О компании 
-            </div>
+            <h1 class="background__text">
+                О компании
+            </h1>
         </div>
     </header>
+    <div class="feedback">
+        <div class="help">
+            <h2 class="help__text">
+                Помогаем с инвестиционной имиграцией от ВНЖ до гражданства
+            </h2>
+            <p class="help__subtext">
+                Подберем программу инвестиционного гражданства, которая подойдет под ваш бюджет и решит поставленные
+                задачи, Например, получить максимально возможное количество стран с безвизовым правом въезда или свободу
+                проживания в странах ЕС.
+            </p>
+            <p class="help__subtext">
+                Работаем с русскоязычных клиентами из любой страны мира. Оформляем статус только в рамках легальных
+                государственных программам Европы и стран Карибского бассейна.
+            </p>
+        </div>
+    </div>
+    <div class="type">
+        <div class="type__text">
+            Связаться с нами
+        </div>
+        <div class="type__form form">
+            <div class="input">
+                <input type="text" name="name" class="input__name" placeholder="Имя">
+                <input type="text" name="email" class="input__email" placeholder="E-mail">
+            </div>
+            <div class="form__button">
+                <a href="#">
+                    получить условия программы
+                </a> 
+            </div>
+            <div class="form__little border">
+                Подробную информацию о том, как мы обрабатываем ваши личные данные, можно найти в разделе
+            </div>
+            <a href="#" class="form__link border">
+                "Политика конфиденциальности Migration Group".
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
