add team, add media. finish 3 blocks

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
             </h1>
         </div>
     </header>
-    <div class="feedback">
+    <div class="feedback wrapper">
         <div class="help">
             <h2 class="help__text">
                 Помогаем с инвестиционной имиграцией от ВНЖ до гражданства
@@ -33,9 +33,9 @@
         </div>
     </div>
     <div class="type">
-        <div class="type__text">
+        <h2 class="type__text">
             Связаться с нами
-        </div>
+        </h2>
         <div class="type__form form">
             <div class="input">
                 <input type="text" name="name" class="input__name" placeholder="Имя">
@@ -44,7 +44,7 @@
             <div class="form__button">
                 <a href="#">
                     получить условия программы
-                </a> 
+                </a>
             </div>
             <div class="form__little border">
                 Подробную информацию о том, как мы обрабатываем ваши личные данные, можно найти в разделе
@@ -54,6 +54,300 @@
             </a>
         </div>
     </div>
-</body>
 
+
+    <div class="command">
+        <h2 class="command__title">
+            Наша команда
+        </h2>
+        <div class="our">
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Сергей Безухов
+                    </div>
+                    <div class="team__position">
+                        управляющий партнер
+                    </div>
+                    <p>
+                        операционный директор, эксперт
+                        по инвестиционной иммиграции в ЕС
+                    </p>
+                    <p>
+                        Поможет подобрать нужную программу исходя из задач и возможностей клиента. Проведет проверку
+                        соответствия критериям программ. Курирует работу представительств компании в Москве, Алматы и
+                        Киеве.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                    <div class="social__snob"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Снежана Бодиштяну
+                    </div>
+                    <div class="team__position">
+                        управляющий партнер
+                    </div>
+                    <p>
+                        адвокат, кандидат юр. наук
+                        (международный коммерческий арбитраж)
+                    </p>
+                    <p>
+                        Номер лицензии MiIP and MRVP Agent – 108.
+                        Поможет оформить статус на Мальте, сопровождает оформление инвестиционных программ ПМЖ и
+                        гражданства с момента заключения и до окончания программы.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                    <div class="social__snob"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Евгений Бодиштяну
+                    </div>
+                    <div class="team__position">
+                        управляющий партнер
+                    </div>
+                    <p>
+                        финансовый директор
+                    </p>
+                    <p>
+                        Проведет аудит финансовых документов, организует подготовку полного пакет документов для
+                        проверки на благонадежность, проконсультирует по налогообложению и инвестициям.
+                        В портфеле Евгения - более 50 подготовленных кейсов инвесторов.
+
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Анна Шумская
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        руководитель EUEasy
+                    </p>
+                    <p>
+                        Поможет оформить «золотую визу» или статус финансово независимого лица в Греции, Италии и
+                        Испании и купить недвижимость в Греции – лицензированный риэлтор.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__instagram"></div>
+                    <div class="social__twitter"></div>
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                    <div class="social__snob"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Максим Бодиштяну
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        управляющий недвижимостью
+                    </p>
+                    <p>
+                        Организовывает консьерж-сервис на Мальте, помогает управлять недвижимостью инвесторов на
+                        острове. Является экспертом
+                        по недвижимости на Мальте - подбор, ремонт, управление.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Михаил Штейнбок
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        главный редактор сайта
+                    </p>
+                    <p>
+                        6 лет опыта в диджитал-маркетинге, из них 3 года руководил отделом контента крупного
+                        интернет-маркетингового агентства. Преподавал контент-маркетинг в компьютерной академии “Шаг”.
+                        Выпускник и последователь курсов Максима Ильяхова.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Денис Добромыслов
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        специалист по программам Франции
+                    </p>
+                    <p>
+                        Поможет получить ВНЖ во Франции, Бельгии, Квебеке, Монако и Швейцарии. Также может подобрать
+                        образовательную программу и поможет с поступлением в школу или ВУЗ, создать и перевести досье,
+                        получить визу и подобрать жилье во франкоязычных странах.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Анна Захарова
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        специалист по программам Италии
+                    </p>
+                    <p>
+                        Поможет оформить «золотую визу» или статус финансово независимого лица в Италии, является
+                        представителем компании в Италии. Постоянно проживает в Италии, занимается образовательными
+                        программами в Италии.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                    <div class="social__snob"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Наталья Захарова
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        эксперт по карибским программам гражданства
+                    </p>
+                    <p>
+                        Имеет большой опыт работы с клиентами из России и стран СНГ по Карибским странам. Эксперт по
+                        программам гражданства Карибских стран за инвестиции - Антигуа и Барбуда, Сент-Китс и Невис,
+                        Доминика, Гренада, Сент-Люсия, Вануату.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+                <div class="social">
+                    <div class="social__facebook"></div>
+                    <div class="social__linkedin"></div>
+                    <div class="social__snob"></div>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Жанаим Келдыбай
+                    </div>
+                    <div class="team__position">
+                        менеджер компании в Алматы
+                    </div>
+                    <p>
+                        операционный директор, эксперт
+                        по инвестиционной иммиграции в ЕС
+                    </p>
+                    <p>
+                        Помогает с подготовкой документов для граждан Казахстана. Специализируется на подготовке
+                        документов для программы Мальты.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+            </div>
+            <div class="our-team">
+                <div class="our-team__img"></div>
+                <div class="team">
+                    <div class="team__name">
+                        Татьяна Пачковская
+                    </div>
+                    <div class="team__position">
+                        партнер
+                    </div>
+                    <p>
+                        специалист по программам Испания
+                    </p>
+                    <p>
+                        Дипломированный переводчик с испанского и английского языка.
+                        Окончила курсы испанского языка в Испании - Майорка, получила уровень переводчик в Испании. Опыт
+                        работы переводчиком - более 10 лет, в миграции - более 7 лет.
+                    </p>
+                    <a href="#" class="team__more">
+                        подробнее
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
