--- a/src/index.html
+++ b/src/index.html
@@ -84,9 +84,15 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
-                    <div class="social__snob"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__snob"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -112,9 +118,15 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
-                    <div class="social__snob"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__snob"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -140,7 +152,9 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -164,11 +178,21 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__instagram"></div>
-                    <div class="social__twitter"></div>
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
-                    <div class="social__snob"></div>
+                    <a href="#">
+                        <div class="social__instagram"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__twitter"></div>
+                    </a>                   
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__snob"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -193,8 +217,12 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -219,8 +247,12 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -245,8 +277,12 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -271,9 +307,15 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
-                    <div class="social__snob"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__snob"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -298,9 +340,15 @@
                     </a>
                 </div>
                 <div class="social">
-                    <div class="social__facebook"></div>
-                    <div class="social__linkedin"></div>
-                    <div class="social__snob"></div>
+                    <a href="#">
+                        <div class="social__facebook"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__linkedin"></div>
+                    </a>
+                    <a href="#">
+                        <div class="social__snob"></div>
+                    </a>
                 </div>
             </div>
             <div class="our-team">
@@ -349,5 +397,7 @@
             </div>
         </div>
     </div>
+    <div class="bottom"></div>
 </body>
+
 </html>
